# jetsonNano

./: .gitignore  Xdisplay.txt  buildOpenCV3.sh  camtest.py  gpumonitor.txt  tegra-cam.py  upload.sh
Servo/: Servotest.py  angleSet.py
_servo/: Servotest.py  angleSet.py
darknet_ojb_detec_tracker_classification/: img_detector.py  object_classification.py  object_detecction_tracker.py  video_to_img.py
edge_canny/: canny.py  requirements.txt
gpio/: simple_out.py
opencv/cannyEdge/: solution.py
opencv/cpp/FaceDetection/: main.cpp  test
opencv/cpp/cannyGpuCpu/: CMakeLists.txt  Makefile  cannyCuda.cpp  cpopy_canny_cpp.cpp  perforTest1.cpp
opencv/cpp/faceDataset/: main.cpp  test
opencv/cpp/faceRecognition/: main.cpp
opencv/cpp/houghlines/: main.cpp  test
opencv/cpp/keyVideoPrintConf/: keyTest.cpp  main.cpp  mainCuda.cpp  test
opencv/cpp/opencv_dnn_cuda_yolov3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dnn_opencv.cpp  dnn_opencv.h  original_yolo_cuda copy.cpp  original_yolo_cuda.cpp  startProject  test  yolov3_opencv_dnn_cuda.cpp
opencv/cpp/simpleFaceDet/: main.cpp  test
opencv/faceDetRec/: faceDS.py
opencv/gpu/: CMakeCache.txt  test  video_reader  video_reader.cpp
opencv/opencvWaitKey/: waitkey.py
robotCar/: robotCar.py
servo/: PCA9685.py  Servo.py
ssd_mobilnet/: Makefile  dnn_opencv.cpp  dnn_opencv.h  main.cpp  main.py  test
ssd_mobilnet_tensorRT/: .gitattributes  Makefile  main.cpp  sampleSSD.cpp  sampleSSD.h  test
ssd_mobilnet_tensorRT/common/: common.h
yoloDetectionCvcuda/: Makefile  main.cpp  test
(+29 files in other folders)
